# ragas-alt

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
docs/: index.md  requirements.txt
docs/api/: base.md  index.md  utils.md
docs/assets/: faithfulness_diagram.md  metrics_interaction.md  precision_diagram.md
docs/metrics/: faithfulness.md  index.md  interaction.md  precision.md  recall.md  relevance.md  systematic-decomposition.md  utility.md
docs/usage/: batch_evaluation.md  best_practices.md  customization.md  examples.md  index.md  troubleshooting.md
examples/: batch_evaluation.py  check_faithfulness.py  check_precision.py  check_relevance.py  custom_metric.py  using_utils.py
metrics/: index.html
metrics/faithfulness/: index.html
metrics/precision/: index.html
metrics/relevance/: index.html
metrics/systematic-decomposition/: index.html
notes/: metrics_explained.md  tips.md
rag_evals/: __init__.py  base.py  score_faithfulness.py  score_precision.py  utils.py
rag_evals/metrics/: __init__.py  faithfulness.py  precision.py  relevance.py
search/: search_index.json
tests/: conftest.py  test_base.py
usage/: index.html
usage/best_practices/: index.html
usage/customization/: index.html
usage/examples/: index.html
usage/troubleshooting/: index.html
