[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "ragas-alt"
version = "0.1.0"
description = "Simple, modular primitives for evaluating RAG systems using LLMs"
readme = "README.md" # Optional: if you have a README.md
requires-python = ">=3.8"
license = {text = "MIT"} # Or any other license
authors = [
    {name = "Jason Liu", email = "jason@jxnl.co"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "instructor>=0.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio"
]
lint = [
    "ruff",
    "mypy"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[project.urls]
"Homepage" = "https://github.com/jxnl/ragas-alt"
"Bug Tracker" = "https://github.com/jxnl/ragas-alt/issues"

# You can add tool-specific configurations below, for example:
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "N"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true 